--- a/configs/model_ckpt/mm+ptm.xlmr-l+p.1.yaml
+++ b/configs/model_ckpt/mm+ptm.xlmr-l+p.1.yaml
@@ -1,6 +1,6 @@
 class_path: pytorch_lightning.callbacks.model_checkpoint.ModelCheckpoint
 init_args:
-  dirpath: models/mm+ptm.xlmr-l+p.1
+  dirpath: models/mm+ptm.xlmr-l+p.1/checkpoints
   filename: '{epoch}-{step}-{val_kendall:.3f}'
   monitor: val_kendall
   verbose: True
