--- a/configs/model_ckpt/mm+ptm.xlmr-l+p.1.yaml
+++ b/configs/model_ckpt/mm+ptm.xlmr-l+p.1.yaml
@@ -8,7 +8,7 @@ init_args:
   save_top_k: 2
   mode: max
   auto_insert_metric_name: True
-  save_weights_only: True
+  save_weights_only: False
   every_n_train_steps: null
   train_time_interval: null
   every_n_epochs: 1
